--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,10 +1,13 @@
 :root {
   /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   line-height: 1.5;
+
+  font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
@@ -22,6 +25,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  color: #2E2F42;
 }
 
 main {
@@ -29,4 +33,129 @@ main {
 }
 main:has(.back-link) {
   text-align: center;
+}
+
+.timer-controls {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+.timer-controls input {
+  width: 272px;
+}
+input {
+  font-family: inherit;
+  font-size: inherit;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+}
+
+input:hover {
+  border-color: #000;
+}
+
+input:active {
+  border-color: #4E75FF;
+}
+
+input:disabled {
+  background: #FAFAFA;
+  border: 1px solid #808080;
+  color: #808080;
+}
+
+fieldset {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin: 0;
+  width: 100%;
+  display: flex;
+
+  justify-content: center;
+  gap: 48px;
+  box-sizing: border-box;
+  box-shadow: none;
+}
+
+fieldset label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+  line-height: 24px; /* 150% */
+}
+
+fieldset label input[type="radio"] {
+  width: 20px;
+  height: 20px;
+  margin: 6px;
+  padding: 0;
+}
+
+button {
+  border: none;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  border-radius: 8px;
+  border: 1px solid #4E75FF;
+  background-color: #4E75FF;
+  padding: 8px 16px;
+  color: #FFF;
+  font-weight: 500;
+}
+
+button:hover {
+  background-color: #6C8CFF;
+  border-color: #6C8CFF;
+}
+
+button:disabled {
+  color: #989898;
+  background-color: #CFCFCF;
+  border-color: #CFCFCF;
+}
+
+.form > label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  font-size: 16px;
+  line-height: 24px; /* 150% */
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.value {
+  font-size: 40px;
+  line-height: 48px; /* 120% */
+}
+.label {
+  text-transform: uppercase;
+}
+
+.form {
+  max-width: 360px;
+  width: 100%;
+}
+.form > label {
+  margin-bottom: 16px;
+}
+.form fieldset {
+  margin-bottom: 24px;
 }
