--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,10 +8,10 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="/1-timer.html" class="nav-link {=$highlight-act}">Timer</a>
+          <a href="./1-timer.html" class="nav-link {=$highlight-act}">Timer</a>
         </li>
         <li class="nav-item">
-          <a href="/2-snackbar.html" class="nav-link {=$highlight-curr}">Snackbar</a>
+          <a href="./2-snackbar.html" class="nav-link {=$highlight-curr}">Snackbar</a>
         </li>
       </ul>
     </nav>
